--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,12 @@
-version: '3.6'
+version: "3.7"
 services:
   competitions:
     build: .
     ports:
       - "8080:8080"
-    links:
-      - "mongodb"
     depends_on:
-      - mongodb
-  mongodb:
+      - db
+  db:
     image: mongo
 
-#    ports:
-#      - 27017:27017
+
