--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-#mongodb for dockwr
-#spring.data.mongodb.host=localhost
+#mongodb for docker
+spring.data.mongodb.host=db
 #spring.data.mongodb.port=27017
-#spring.data.mongodb.database=tourneys
-#spring.data.mongodb.host=hk-mongodb
